--- a/cr-app-nifi.json
+++ b/cr-app-nifi.json
@@ -32,7 +32,7 @@
             {
                 "endpoint": {
                     "urlScheme": "http",
-                    "path": "/",
+                    "path": "/nifi",
                     "port": 8080,
                     "isDashboard": true
                 },
